@@ -1,4 +1,4 @@
 module PartialDate
   # partial-date version
-    VERSION = "1.1.7"
+    VERSION = "1.1.8"
 end
