@@ -1,3 +1,7 @@
+h3. 1.1.8 / 2012-05-30
+
+* Implemented to_s formatters.
+
 h3. 1.1.7 / 2012-05-30
 
 * BugFix: Another logical error in to_s - fixed (formatters next).
